金額クラスを追加。

--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -80,6 +80,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="PrimitiveObject\必須文字列.vb" />
+    <Compile Include="PrimitiveObject\金額.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
