メモを追加

--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -101,8 +101,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="設計ドキュメント\" />
+    <Content Include="設計ドキュメント\開発の考え方メモ.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
