--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -80,6 +80,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="PrimitiveObject\必須文字列.vb" />
+    <Compile Include="PrimitiveObject\日時.vb" />
+    <Compile Include="PrimitiveObject\自然数.vb" />
     <Compile Include="PrimitiveObject\金額.vb" />
   </ItemGroup>
   <ItemGroup>
