コメントを修正

--- a/UnitTest/UnitTest.vbproj
+++ b/UnitTest/UnitTest.vbproj
@@ -82,7 +82,7 @@
     <Import Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PrimitiveObjectのテスト\日時クラスのテスト.vb" />
+    <Compile Include="PrimitiveObjectのテスト\日付クラスのテスト.vb" />
     <Compile Include="PrimitiveObjectのテスト\自然数クラスのテスト.vb" />
     <Compile Include="PrimitiveObjectのテスト\金額クラステスト.vb" />
     <Compile Include="PrimitiveObjectのテスト\必須文字列クラステスト.vb" />
