--- a/UnitTest/UnitTest.vbproj
+++ b/UnitTest/UnitTest.vbproj
@@ -82,6 +82,7 @@
     <Import Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessObjectのテスト\価格変更項目クラステスト.vb" />
     <Compile Include="BusinessObjectのテスト\製品IDテスト.vb" />
     <Compile Include="BusinessObjectのテスト\メーカークラステスト.vb" />
     <Compile Include="BusinessObjectのテスト\商品分類テスト.vb" />
