--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -77,6 +77,7 @@
     <Compile Include="BusinessObject\商品\メーカー.vb" />
     <Compile Include="BusinessObject\商品\価格変更リスト.vb" />
     <Compile Include="BusinessObject\商品\価格変更項目.vb" />
+    <Compile Include="BusinessObject\商品\取扱商品.vb" />
     <Compile Include="BusinessObject\商品\商品.vb" />
     <Compile Include="BusinessObject\商品\商品分類.vb" />
     <Compile Include="BusinessObject\商品\商品ID.vb" />
