--- a/UserInterfaceTest/UserInterfaceTest.vbproj
+++ b/UserInterfaceTest/UserInterfaceTest.vbproj
@@ -87,6 +87,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="M_メーカー.vb">
+      <DependentUpon>UIDBModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="M_商品分類.vb">
+      <DependentUpon>UIDBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="スタート画面.vb">
       <SubType>Form</SubType>
     </Compile>
