--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -78,13 +78,13 @@
   <ItemGroup>
     <Compile Include="BusinessObject\商品\メーカー.vb" />
     <Compile Include="BusinessObject\商品\メーカーID.vb" />
-    <Compile Include="BusinessObject\商品\価格変更予定表.vb" />
+    <Compile Include="BusinessObject\商品\価格変更計画.vb" />
     <Compile Include="BusinessObject\商品\価格変更項目.vb" />
     <Compile Include="BusinessObject\商品\取扱商品.vb" />
     <Compile Include="BusinessObject\商品\商品.vb" />
-    <Compile Include="BusinessObject\商品\商品分類.vb" />
+    <Compile Include="BusinessObject\商品\分類.vb" />
     <Compile Include="BusinessObject\商品\商品ID.vb" />
-    <Compile Include="BusinessObject\商品\商品分類コード.vb" />
+    <Compile Include="BusinessObject\商品\分類コード.vb" />
     <Compile Include="DataModel.Context.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
