--- a/UnitTest/UnitTest.vbproj
+++ b/UnitTest/UnitTest.vbproj
@@ -95,7 +95,7 @@
   <ItemGroup>
     <Compile Include="BusinessObjectのテスト\商品分類コードテスト.vb" />
     <Compile Include="BusinessObjectのテスト\メーカーIDテスト.vb" />
-    <Compile Include="BusinessObjectのテスト\価格変更予定表クラステスト.vb" />
+    <Compile Include="BusinessObjectのテスト\価格変更計画クラステスト.vb" />
     <Compile Include="BusinessObjectのテスト\価格変更項目クラステスト.vb" />
     <Compile Include="BusinessObjectのテスト\商品IDテスト.vb" />
     <Compile Include="BusinessObjectのテスト\メーカークラステスト.vb" />
