--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -100,6 +100,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="FoundationObject\単位.vb" />
     <Compile Include="M_メーカー.vb">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
