--- a/UnitTest/UnitTest.vbproj
+++ b/UnitTest/UnitTest.vbproj
@@ -102,6 +102,7 @@
     <Compile Include="BusinessObjectのテスト\メーカークラステスト.vb" />
     <Compile Include="BusinessObjectのテスト\商品分類テスト.vb" />
     <Compile Include="BusinessObjectのテスト\商品クラステスト.vb" />
+    <Compile Include="FoundationObject\単位クラステスト.vb" />
     <Compile Include="M_メーカー.vb">
       <DependentUpon>TestDBModel.tt</DependentUpon>
     </Compile>
