商品の価格を設計変更する前

--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="BusinessObject\商品\メーカー.vb" />
     <Compile Include="BusinessObject\商品\メーカーID.vb" />
+    <Compile Include="BusinessObject\商品\適用価格.vb" />
     <Compile Include="BusinessObject\商品\価格変更\スケジュール.vb" />
     <Compile Include="BusinessObject\商品\価格変更\予定.vb" />
     <Compile Include="BusinessObject\商品\取扱商品.vb" />
