仕様変更、リファクタリング

--- a/UnitTest/UnitTest.vbproj
+++ b/UnitTest/UnitTest.vbproj
@@ -98,7 +98,7 @@
     <Compile Include="BusinessObject\商品分類コードテスト.vb" />
     <Compile Include="BusinessObject\メーカーIDテスト.vb" />
     <Compile Include="BusinessObject\価格変更スケジュールクラステスト.vb" />
-    <Compile Include="BusinessObject\価格変更予定クラステスト.vb" />
+    <Compile Include="BusinessObject\価格変更適用価格クラステスト.vb" />
     <Compile Include="BusinessObject\商品IDテスト.vb" />
     <Compile Include="BusinessObject\メーカークラステスト.vb" />
     <Compile Include="BusinessObject\商品分類テスト.vb" />
