--- a/SampleApplication/SampleApplication.vbproj
+++ b/SampleApplication/SampleApplication.vbproj
@@ -78,6 +78,7 @@
   <ItemGroup>
     <Compile Include="BusinessObject\商品\メーカー.vb" />
     <Compile Include="BusinessObject\商品\メーカーID.vb" />
+    <Compile Include="BusinessObject\商品\分類リスト.vb" />
     <Compile Include="BusinessObject\商品\適用価格\スケジュール.vb" />
     <Compile Include="BusinessObject\商品\適用価格\価格.vb" />
     <Compile Include="BusinessObject\商品\取扱商品.vb" />
@@ -100,6 +101,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="FoundationObject\ページ.vb" />
     <Compile Include="FoundationObject\単位.vb" />
     <Compile Include="M_メーカー.vb">
       <DependentUpon>DataModel.tt</DependentUpon>
